# transpiler

./: .gitignore  .gitmodules  CMakeLists.txt  ExportTsProbe.cpp  GOAL.md  README.md  build.sh  capture_screenshots.py
export-template/: package.json
export-template/src/: main.ts
export-template/src/runtime/: ScoreData.ts  SoftwareFrameRenderer.ts
probe/: boot-probe.mjs  oracle-crossref.mjs
runtime-template/src/: LingoRuntimeHost.ts  ScoreData.ts  SoftwareFrameRenderer.ts
runtime/project/: index.html  package.json  tsconfig.json  vite.config.ts
runtime/project/scripts/: preview.mjs
runtime/project/src/: main.ts
runtime/src/: AssetStore.ts  AudioPlayer.ts  FrameSnapshot.ts  LingoRuntimeHost.ts  MultiuserXtra.ts  ScoreData.ts  SoftwareFrameRenderer.ts  XmlParserXtra.ts  index.ts  lingo-runtime.ts  network.ts  version.ts
runtime/test/: ScoreData.test.ts  SoftwareFrameRenderer.test.ts  lingo-runtime.test.ts
scripts/: cors_http_server.py
